--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bee-city-select",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "CitySelect ui component for react",
   "keywords": [
     "react",
@@ -34,10 +34,15 @@
   },
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "bee-select": "^0.1.5",
+    "bee-select": "latest",
     "classnames": "^2.2.5",
     "tinper-bee-core": "latest"
   },
+  "peerDependencies": {
+    "react": "^15.3.0 || ^16.0",
+    "react-dom": "^15.3.0 || ^16.0",
+    "prop-types": "15.6.0"
+   },
   "devDependencies": {
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
