--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
     "babel-runtime": "^6.23.0",
     "bee-select": "latest",
     "classnames": "^2.2.5",
+    "lodash.findindex": "^4.6.0",
     "tinper-bee-core": "latest"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0",
     "react-dom": "^15.3.0 || ^16.0",
     "prop-types": "15.6.0"
-   },
+  },
   "devDependencies": {
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
