--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
  },
  "dependencies": {
   "babel-runtime": "^6.23.0",
-  "bee-select": "^2.0.1",
+  "bee-select": "latest",
   "classnames": "^2.2.5",
   "lodash.findindex": "^4.6.0",
   "tinper-bee-core": "latest"
